[project]
name = "multi-level-directory-scraper"
version = "0.1.0"
description = "A multi-level directory scraper that extracts structured data from hierarchical websites"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "structlog>=25.0.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "playwright>=1.49.0",
    "tenacity>=9.0.0",
    "phonenumbers>=8.13",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
]

[project.scripts]
scraper = "scraper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper", "src/models", "src/validation", "src/pipeline", "src/export"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
